[tool.poetry]
name = "heroku-deploy"
version = "0.1.0"
description = "Deploy"
authors = ["tiagosb <tdsb.contato@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"
gunicorn = "^20.0.4"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
